syntax = "proto3";

package contextcommerce;

message Product {
    string id = 1;
    string sku = 2;
    string name = 3;
    string description = 4;
    float price = 5;
    string currency = 6;
    int32 stock_quantity = 7;
    map<string, string> attributes = 8;
}

message GetProductRequest {
    string tenant_id = 1;
    string id = 2;
    string sku = 3;
}

message ProductResponse {
    Product product = 1;
}

message UpdateProductRequest {
    string tenant_id = 1;
    string id = 2;
    map<string, string> patch = 3; // JSON patch or flat map
}

service CommerceService {
    rpc GetProduct(GetProductRequest) returns (ProductResponse);
    rpc UpdateProduct(UpdateProductRequest) returns (ProductResponse);
    rpc TriggerHarvest(HarvestRequest) returns (HarvestResponse);
}

message HarvestRequest {
    string supplier_code = 1;
}

message HarvestResponse {
    string job_id = 1;
    string status = 2;
}
